обновлена спека
